[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bashexplain"
version = "1.0.0"
authors = [
    { name = "Ashish Singh", email = "ashishsingh.mail26@gmail.com" },
    { name = "Ravi Poddar", email = "ravipoddar2006@gmail.com" },
]
description = "A command-line tool to explain Bash commands, errors, and scripts"
readme = "README.md"
requires-python = ">=3.6"
keywords = ["bash", "shell", "terminal", "cli", "education", "learning", "command-line"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: System Administrators",
    "Topic :: Education",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://github.com/singhashish12238-pixel/bash-explain"
"Bug Tracker" = "https://github.com/singhashish12238-pixel/bash-explain/issues"
"Source Code" = "https://github.com/singhashish12238-pixel/bash-explain"
Documentation = "https://github.com/singhashish12238-pixel/bash-explain#readme"

[project.scripts]
bashexplain = "bash_explain:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.9",
    "twine>=4.0",
    "build>=0.10",
]

[tool.setuptools]
py-modules = ["bash_explain"]